tekst schaduw h2 werkt
De witte rand om h2 article werkt nu

--- a/styles/main.css
+++ b/styles/main.css
@@ -108,11 +108,11 @@ article h2{
   background-position: center;
   background-size: cover;
   text-align: center;
-  text-shadow:
-    0 0 0 #FCFCFC,
-    -1px -1px 0 #FCFCFC
-    1px -1px 0 #FCFCFC,
-    -1px 1px 0 #FCFCFC,
+  text-shadow: 
+    0 0 #FCFCFC,
+    -1px -1px 0 #FCFCFC,
+    1px 1px 0 #FCFCFC,
+    -1px -1px 0 #FCFCFC,
     1px 1px 0 #FCFCFC;
 }
 article h2.fun-for-family{
@@ -162,6 +162,7 @@ button{
 }
 
 .sidy-by-side{
+  
 }
 
 .description{
