--- a/styles/main.css
+++ b/styles/main.css
@@ -60,6 +60,10 @@ h1{
     -1px 1px 0 #FCFCFC,
     1px 1px 0 #FCFCFC;
 }
+a{
+  text-decoration: none;
+  color: #000000;
+}
 
 h2{
   border-left: 5px solid #27AE60;
