--- a/styles/main.css
+++ b/styles/main.css
@@ -172,6 +172,9 @@ button{
   display: flex;
   flex-direction: row;
 }
+.row2{
+  display: flex;
+  flex-direction: row;}
 .description{
   flex: 1;
 }
