--- a/styles/main.css
+++ b/styles/main.css
@@ -162,7 +162,10 @@ button{
 }
 
 .payment-option{
+  border-left: #27AE60;
+  box-shadow: 5px 10px;
   height: 64px;
+  
 }
 
 .sidy-by-side{
@@ -174,7 +177,15 @@ button{
 }
 .row2{
   display: flex;
-  flex-direction: row;}
+  flex-direction: row;
+}
+.emphasize{
+  padding: 1em;
+  
+  box-shadow: 0px 0px 5px 0px #27AE60;
+
+}
+
 .description{
   flex: 1;
 }
