--- a/styles/main.css
+++ b/styles/main.css
@@ -215,7 +215,12 @@ footer{
 */
 
 @media (max-width: 480px) {
-
+  .hidden-on-lg{
+    display: block;
+    }
+  .hidden-on-sm{
+    display: none;
+  }
 }
 
 /* 
