--- a/styles/main.css
+++ b/styles/main.css
@@ -190,7 +190,16 @@ button{
   box-shadow: 0px 0px 5px 0px #27AE60;
 
 }
-
+.image{
+  width: 410px;
+}
+.container{
+  display: flex;
+  justify-content: left;
+}
+.text p{
+  margin: 0;
+}
 .description{
   flex: 1;
 }
@@ -225,6 +234,10 @@ footer{
   .hidden-on-sm{
     display: none;
   }
+  .text{
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 /* 
@@ -245,6 +258,7 @@ footer{
     flex-direction: column;
     align-items: center;
   }
+  
 }
 
 /*
